--- a/DDosProject/src/main/webapp/assets/css/login.css
+++ b/DDosProject/src/main/webapp/assets/css/login.css
@@ -109,6 +109,48 @@ body .container .content label {
 body .container .content label:not([for='remember']) {
   display: none;
 }
+
+
+body .container .content input.inpt1 {
+  margin-left:10%;
+  font-size: 14px;
+  display: inline-block;
+  width: 80%;
+  height: 42px;
+  margin-bottom: 12px;
+  padding: 16px 13px;
+  color: #999999;
+  border: 1px solid #d9d9d9;
+  background: transparent;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+body .container .content input.inpt1::-webkit-input-placeholder {
+  font-size: 14px;
+  color: #999999;
+  font-family: 'Lato', sans-serif;
+}
+body .container .content input.inpt1:-moz-placeholder {
+  font-size: 14px;
+  color: #999999;
+  font-family: 'Lato', sans-serif;
+}
+body .container .content input.inpt1::-moz-placeholder {
+  font-size: 14px;
+  color: #999999;
+  font-family: 'Lato', sans-serif;
+}
+body .container .content input.inpt1:-ms-input-placeholder {
+  font-size: 14px;
+  color: #999999;
+  font-family: 'Lato', sans-serif;
+}
+body .container .content input.inpt1:focus {
+  border-color: #999999;
+}
+
+
 body .container .content input.inpt {
   margin-left:10%;
   font-size: 14px;
